# borsa

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.tape  docker-compose.yml  egx_standalone.py  justfile  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: ci.yml
apps/web/: README.md  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/docs/: page.tsx
apps/web/components/: code-examples.tsx  docs-content.tsx  faq.tsx  feature-grid.tsx  footer.tsx  hero.tsx  how-it-works.tsx  icons.tsx  live-demo.tsx  navbar.tsx  syntax-highlight.tsx  theme-provider.tsx  why-section.tsx
apps/web/lib/: config.ts  links.ts
docs/: adding-a-fetcher.md  endpoints.md  index.md  mint.json  self-hosting.md
src/borsa/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py
src/borsa/data/: symbols.py
src/borsa/fetchers/: __init__.py  alpha_vantage.py  base.py  finnhub.py  yahoo.py
src/borsa/services/: cache.py  stocks.py
tests/: test_api.py  test_cache.py  test_config.py  test_demo_limit.py  test_endpoints.py  test_fetchers.py  test_stocks_service.py  test_symbols.py
