[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "borsa"
version = "0.1.0"
description = "Unified EGX market data API — self-hostable, BYOK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "borsa contributors" }]
keywords = ["egx", "stock market", "egypt", "fastapi", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "numpy==1.26.4",
    "yfinance>=0.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cachetools>=5.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",           # httpx mocking for fetcher tests
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-cachetools>=5.3",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/your-username/borsa"
Repository = "https://github.com/your-username/borsa"
Issues = "https://github.com/your-username/borsa/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/borsa"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "cachetools.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=borsa --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/borsa"]
omit = ["*/tests/*"]
